<?xml version="1.0"?>
<package format="2">
  <name>videoray_msgs</name>
  <version>0.0.1</version>
  <description>The videoray_msgs package</description>
  <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/RobustFieldAutonomyLab/videoray</url>
  <author email="jwang92@stevens.edu">Jinkun Wang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
